# Bobocraft

./: .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  output.3mf
.github/workflows/: ci.yml
client/: Cargo.toml
client/assets/: gltf  hitmarker.glb
client/assets/3mm/: alienware_ear_left.3mm  alienware_ear_right.3mm  alienware_eye_left.3mm  alienware_eye_right.3mm  alienware_head_left.3mm  alienware_head_right.3mm  altimeter.3mm  balloon.3mm  bubbleblower.3mm  cockpit_front_left.3mm  cockpit_front_right.3mm  cockpit_mid_left.3mm  cockpit_mid_right.3mm  cockpit_top_left.3mm  cockpit_top_right.3mm  compact_cone.3mm  compact_corner_round.3mm  compact_corner_slope.3mm  compact_edge.3mm  compact_edge_slope.3mm  compact_inner.3mm  compact_inner_slope.3mm  compact_pyramid.3mm  eagle_face_left.3mm  eagle_face_right.3mm  eagle_feathers_left.3mm  eagle_feathers_right.3mm  eagle_neck_left.3mm  eagle_neck_right.3mm  exhaust_blower.3mm  exhaust_stack_left.3mm  exhaust_stack_right.3mm  eyeball_cat_left.3mm  eyeball_cat_right.3mm  eyeball_cyborg.3mm  eyeball_vigilant_left.3mm  eyeball_vigilant_right.3mm  fairy_lights.3mm  football_face_left.3mm  football_face_right.3mm  (+297 more)
client/src/: camera.rs  config.rs  main.rs  tests.rs
cubes/: Cargo.toml
cubes/src/: connections.rs  cube.rs  idents.rs  lib.rs  similar_cube.rs  stats.rs  tests.rs
format/: Cargo.toml
format/src/: color.rs  json.rs  lib.rs  postcard.rs  rotation.rs
graph/: Cargo.toml
graph/src/: connections.rs  lib.rs  position.rs  rng.rs
graph/src/cubes/: history.rs  mod.rs  simple.rs
graph/src/graph/: damage.rs  mod.rs  reduced.rs  simple.rs
graph/src/tests/: connections.rs
