[package]
name = "bobocraft"
edition = "2021"
version = "0.1.0"

[dependencies]
bevy_simple_text_input = "0.10"
serde = "1"
serde_json = "1"
anyhow = "1"
# latest commits as of jan 25 2025
# pinned to prevent a compile error down the line due to updates
bevy_mod_raycast = { git = "https://github.com/NthTensor/bevy_mod_raycast.git", rev = "8416f6ec9008a0736f65b5788a3f85c05288efd2", default-features = false }
bevy-scene-hook = { git = "https://github.com/AlephCubed/bevy-scene-hook.git", rev = "7f944bcadd3f4c01cd4b6e436435ee4bda720910" }
bobocraft-format = { path = "../format" }
bobocraft-cubes = { path = "../cubes" }
bobocraft-graph = { path = "../graph" }
bevy_editor_pls = { version = "0.10", optional = true }
crossbeam-channel = "0.5"
directories = "6"
bevy_embedded_assets = "0.12"

[dependencies.bevy]
version = "0.15"
features = ["wayland", "serialize"]

[target.'cfg(windows)'.dependencies.nu-ansi-term]
version = "0.50"

[features]
editor = ["dep:bevy_editor_pls"]
sped = ["bevy/dynamic_linking"]
